Fixed text alignment for landing tools.

--- a/modules/gui/frontend/src/app/landing/intro.module.css
+++ b/modules/gui/frontend/src/app/landing/intro.module.css
@@ -130,7 +130,7 @@
     line-height: 1.8rem;
 }
 
-.block.right .tool {
+.right.tool > div {
     justify-self: right;
     text-align: right;
 }
